--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -34,6 +34,7 @@ pipeline {
             }
             steps {
                 sh 'pyinstaller --onefile sources/add2vals.py'
+                input message: 'Sudah selesai menggunakan React App? (Klik "Proceed" untuk mengakhiri)'
             }
             post {
                 success {
